Refactoring market data api

--- a/tutorial/How to load market data.ipynb
+++ b/tutorial/How to load market data.ipynb
@@ -6,35 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load libraries\n",
-    "from quantplay.strategies.qplay_algorithm import QplayAlgorithm\n",
-    "from quantplay.utils.stock_utils import StockUtils\n",
-    "from quantplay.utils.alpha_factory import QuantplayAlphaFactory\n",
-    "from quantplay.utils.data_utils import DataUtils\n",
-    "import numpy as np\n",
-    "import pandas as pd"
+    "from quantplay.service import market"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time taken to load data for day candles --- 1.6947598457336426 seconds ---\n",
-      "time taken to load data for minute candles --- 8.083122730255127 seconds ---\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "# load market data\n",
-    "day_candles = DataUtils.get_data(path='/NSE_EQ/', interval='day', stocks=[\"SBIN\", \"HDFCBANK\"])\n",
-    "minute_candles = DataUtils.get_data(path='/NSE_EQ/', interval='minute', stocks=[\"SBIN\", \"HDFCBANK\"])"
+    "data = market.equity_data(interval='minute', symbols=['NIFTY 50'])"
    ]
   }
  ],
