How to load market data updated

--- a/tutorial/how to load market data.ipynb
+++ b/tutorial/how to load market data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,19 @@
    "outputs": [],
    "source": [
     "data = market.equity_data(interval='minute', symbols=['NIFTY 50'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load market symbols\n",
+    "market.symbols()\n",
+    "\n",
+    "# Load FNO_STOCKS\n",
+    "market.symbols(universe=\"FNO_STOCKS\")"
    ]
   }
  ],
@@ -39,5 +52,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
