Adding tutorial for loading candle patterns

--- a/tutorial/pattern-recognition/Untitled.ipynb
+++ b/tutorial/pattern-recognition/Untitled.ipynb
@@ -2,36 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "034038b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from quantplay.service import market"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "ed3b6c10",
+   "id": "9921cff2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = market.equity_data(interval='minute', symbols=['NIFTY 50'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f050f6f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load market symbols\n",
-    "market.symbols()\n",
+    "import talib\n",
+    "from quantplay.service import market\n",
     "\n",
-    "# Load FNO_STOCKS\n",
-    "market.symbols(universe=\"FNO_STOCKS\")"
+    "data = market.equity_data(interval='day', \n",
+    "                          symbols=market.symbols(\"FNO_STOCKS\"))\n",
+    "\n",
+    "data.loc[:, 'doji_indicator'] = talib.CDLDOJI(data.open, data.high, data.low, data.close)\n",
+    "data[(data.doji_indicator == 100) & (data.date == data.date.max())]"
    ]
   }
  ],
